# cdp-rumble-backend

./: .gitignore  Cargo.toml  README.md  endpoints.json
keys/: cert.pem  key.pem
src/: common.rs  main.rs
src/api/: echo.rs  home.rs  mod.rs  room.rs  task.rs  user.rs
src/model/: message_model.rs  mod.rs  room_model.rs  rooms_model.rs  user_model.rs
src/repository/: message_ops.rs  message_repo.rs  mod.rs  mongo_repo.rs  mongodb_repo.rs  room_ops.rs  user_ops.rs
src/websocket/: lobby.rs  messages.rs  ws.rs
