[package]
name = "rumble-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
dotenv = "0.15.0"
futures = "0.3.25"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]