[package]
name = "rumble-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bson = "2.4.0"
env_logger = "0.9"
log = "0.4.17"
rand = "0.8.5"
dotenv = "0.15.0"
futures = "0.3.25"
openssl = { version = "0.10", features = ["vendored"] }
smartcore = {version = "0.2.1", features=["serde"]}

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime","openssl-tls"]